<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_local"
            android:title="@string/menu_home"
            app:cnb_iconColor="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_global"
            android:title="@string/menu_gallery"
            app:cnb_iconColor="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_slideshow"
            app:cnb_iconColor="@color/colorPrimary"/>
    </group>
</menu>