<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:fontFamily="@font/brawler"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/total_cases"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:fontFamily="@font/brawler"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/deaths"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:fontFamily="@font/brawler"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/recovered"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:id="@+id/txt_totCasesGlobal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_00_000_000"
                    android:textColor="@color/appColor01"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_totDeathsGlobal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_00_000_000"
                    android:textColor="@color/appColor02"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_totRecoveredGlobal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_00_000_000"
                    android:textColor="@color/appColor03"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="end|center_vertical"
                    android:text="@string/txt_new"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_newCasesGlobal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="start|center_vertical"
                    android:text="@string/_00_0000"
                    android:textColor="@color/appColor01"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="end|center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/txt_new"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_newDeathsGlobal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="start|center_vertical"
                    android:text="@string/_00_0000"
                    android:textColor="@color/appColor02"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="end|center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/txt_new"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_newRecoveredGlobal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="start|center_vertical"
                    android:text="@string/_00_0000"
                    android:textColor="@color/appColor03"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:fontFamily="@font/brawler"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/active_cases"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:paddingTop="5dp">

                <TextView
                    android:id="@+id/txt_activeCasesGlobal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="12"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/_00_000_000"
                    android:textColor="@color/appColor04"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:paddingTop="15dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2.5"
                    android:paddingStart="5dp"
                    android:text="Last Updated:"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/txt_lastUpdateGlobal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="8"
                    android:paddingStart="5dp"
                    android:text="@string/date_temp"
                    android:textSize="11sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>